RESOLVED FIXED180953
Apps that use both WK1 and WK2 can crash creating a WKWebsiteDataStore
https://bugs.webkit.org/show_bug.cgi?id=180953
Summary Apps that use both WK1 and WK2 can crash creating a WKWebsiteDataStore
Brady Eidson
Reported 2017-12-18 15:46:15 PST
Apps that use both WK1 and WK2 can crash creating a WKWebsiteDataStore <rdar://problem/36107338>
Attachments
Patch (1.40 KB, patch)
2017-12-18 15:49 PST, Brady Eidson
no flags
Brady Eidson
Comment 1 2017-12-18 15:49:27 PST
WebKit Commit Bot
Comment 2 2017-12-18 16:14:27 PST
Comment on attachment 329696 [details] Patch Clearing flags on attachment: 329696 Committed r226083: <https://trac.webkit.org/changeset/226083>
WebKit Commit Bot
Comment 3 2017-12-18 16:14:28 PST
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.