Apps that use both WK1 and WK2 can crash creating a WKWebsiteDataStore. https://bugs.webkit.org/show_bug.cgi?id=180953

Reviewed by Chris Dumez.

* UIProcess/WebsiteData/WebsiteDataStore.cpp: Make an isMainThread() asset be an isUIThread() assert.


Canonical link: https://commits.webkit.org/196843@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@226083 268f45cc-cd09-0410-ab3c-d52691b4dbfc